@@ -1,6 +1,11 @@
 New in spot 2.4.0.dev (not yet released)
 
-  Nothing yet.
+  Library:
+
+  - The new function remove_alternation_buchi() transforms any alternating TGBA
+    to an equivalent existential TGBA (with the same acceptance condition). The
+    underlying algorithm is an adaptation of the breakpoint algorithm to
+    Generalized Büchi conditions.
 
 New in spot 2.4 (2017-09-06)
 
